Fix overflowing test page in iOS Safari 8
The flexbox styling used wasn't working properly in iOS Safari. By
avoiding to use the component itself as a flex item, I worked around
flexbox inconsistencies leading to the component taking up too much
space in iOS Safari.

--- a/src/test.css
+++ b/src/test.css
@@ -4,11 +4,16 @@
   font-family: helvetica, arial, sans-serif;
   font-size: 12px;
   line-height: 1.2;
+  max-width: 100%;
 }
 
 :local(.intro) {
   width: 220px;
   padding: 20px;
+}
+
+:local(.main) {
+  flex-grow: 1;
 }
 
 :local(.selected) {
